infra/config/kube-prometheus-stack/Gateway-grafana.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: grafana.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: grafana-https
    hostname: grafana.k8sdev.cloud
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
    allowedRoutes:
      namespaces:
        from: Same
