infra/config/kube-prometheus-stack/Gateway-prometheus.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: prometheus.k8sdev.cloud
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: prometheus-https
      hostname: prometheus.k8sdev.cloud
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-tls
      allowedRoutes:
        namespaces:
          from: Same
