infra/config/kube-prometheus-stack/HTTPRoute-grafana.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: grafana
    namespace: monitoring
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
  hostnames:
  - grafana.k8sdev.cloud
