infra/config/kube-prometheus-stack/HTTPRoute-prometheus.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: prometheus
    namespace: monitoring
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: monitoring-prometheus
      port: 9090
  hostnames:
  - prometheus.k8sdev.cloud
